# todo-list

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 28908415c323_create_project_and_task_tables.py
src/todo_list/: main.py
src/todo_list/api/: dependencies.py  main.py  routers.py
src/todo_list/api/controller_schemas/requests/: __init__.py  project.py  task.py
src/todo_list/api/controller_schemas/responses/: __init__.py  project.py  task.py
src/todo_list/api/controllers/: __init__.py  project_controller.py  task_controller.py
src/todo_list/cli/: interface.py
src/todo_list/commands/: __init__.py  autoclose_overdue.py
src/todo_list/core/: entities.py  exceptions.py  validators.py
src/todo_list/db/: __init__.py  base.py  check_connection.py  session.py
src/todo_list/models/: project.py  task.py
src/todo_list/repositories/: __init__.py  base.py  project_repository.py  task_repository.py
src/todo_list/services/: __init__.py  project_service.py  task_service.py
src/todo_list/storage/: in_memory_storage.py
